maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: local variables must be initialized
  var action: Int = _;
      ^RandomMouseMaze:7: error: not found: value againstWall
      case 0 if(!againstWall()) => forward();
                 ^